@@ -140,10 +140,11 @@ Changes to the Mercury standard library
 
 ### New `io.call_system` module
 
-This new module has these predicates:
+This new module has these predicates and functions:
 
     - pred `call_system/4`
     - pred `call_system_return_signal/4`
+    - func `decode_system_command_exit_code/1`
 
 ### New `io.environment` module
 
